--- a/competences.css
+++ b/competences.css
@@ -32,3 +32,7 @@ ul li{
     margin-right: 10px;
     color: rgb(255, 255, 255);
 }
+.introduction{
+    font-style: italic;
+    font-size: small;
+}
